--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,29 +2,20 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  text-decoration: none;
   list-style: none;
 }
 .container {
-  position: relative;
   top: -15rem;
-  width: 100%;
   padding-top: 5rem !important;
   padding-bottom: 2rem !important;
   padding: 0 1rem;
   margin: 0 auto;
 
   & footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     gap: 2.5rem;
 
     .info {
-      display: flex;
-      flex-direction: column;
       gap: 1rem;
-      width: 100%;
 
       & p {
         color: white;
@@ -40,41 +31,34 @@
       }
 
       .socials {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
         gap: 1rem;
+      }
 
-        & figure {
+        figure {
           width: 1.25rem;
           height: 1.25rem;
           color: #8f959e;
-          transition: 200ms;
-
-          & svg {
+        }
+          svg {
             width: 100%;
             height: 100%;
           }
 
-          &:hover {
+          svg:hover {
             color: white;
           }
         }
-      }
+      
+
+    a{
+      text-decoration: none;
     }
 
-    .links {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      width: 100%;
-
-      & span {
-        display: flex;
-        flex-direction: column;
+  
+      span {
         gap: 1.25rem;
 
-        & p {
+         p {
           font-family: sans-serif !important;
           color: white;
           font-size: 0.7rem;
@@ -82,9 +66,7 @@
           text-transform: uppercase;
         }
 
-        & ul {
-          display: flex;
-          flex-direction: column;
+        ul {
           gap: 0.7rem;
 
           & li,
@@ -96,6 +78,7 @@
             color: #8f959e;
             cursor: pointer;
             transition: 200ms;
+            text-transform: none;
 
             &:hover {
               color: white;
@@ -110,18 +93,25 @@
       }
     }
   }
+
+.case{
+  margin-left: 1rem;
+}
+
+.footerContainer{
+  flex-direction: column;
 }
 
 @media (min-width: 768px) {
   .container {
     max-width: 61rem;
-
-    & footer {
-      flex-direction: row;
-      gap: 1.5rem;
-    }
   }
-}
+  .footerContainer {
+    flex-direction: row;
+  }
+  
+  }
+
 
 @media (min-width: 1024px) {
   .container {
