--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,54 +7,46 @@
   list-style: none;
 }
 
-.navContainer {
-  width: 100% !important;
-  padding-top: 3.5rem !important;
-  padding-bottom: 5rem !important;
-  padding: 0 1rem;
-  margin: 0 auto;
+
+.logo{
+  text-wrap: nowrap;
+}
+.navLinks{
+  gap: 2rem;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
 
-  & span p {
-    color: white;
-    margin: 0;
-    text-wrap: nowrap;
-  }
-
-  & .navLinks {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-    color: white;
-
-    .hireUs {
-      display: flex;
-      gap: 0.5rem;
-      align-items: start;
+  & a {
+    color: #8f959e;
+    transition: 200ms ease-in-out;
+    text-decoration: none;
+  
+    &:hover {
       color: white;
-
-      & a {
-        color: white;
-      }
     }
+}
+}
 
-    & a {
-      color: #8f959e;
-      transition: 200ms ease-in-out;
-      text-decoration: none;
+.hireUs {
+  gap: 0.5rem;
+  color: white;
 
-      &:hover {
-        color: white;
-      }
-    }
+  & a {
+    color: white;
+  }
+}
+
+& a {
+  color: #8f959e;
+  transition: 200ms ease-in-out;
+  text-decoration: none;
+
+  &:hover {
+    color: white;
   }
 }
 
 @media (max-width: 767px) {
-  /* Estilos adicionales para el menú deslizante */
-  .navContainer {
+  .container {
     position: relative;
   }
 
@@ -86,28 +78,42 @@
   .hamburger {
     position: relative;
     transition: transform 0.3s ease-in-out;
-    width: auto;
-    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
 
-    & svg {
-      width: 100%;
-      height: 100%;
+    & figure {
+      position: relative;
+      width: 2rem;
+      height: 2rem;
+
+      & svg {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
+  .iconIcon {
+    position: fixed;
+    transform: rotate(90deg);
+    transition: transform 0.3s ease-in-out;
+    color: white;
+  }
+
   .mobileMenuToggle {
+    position: relative;
+    width: 2rem;
+    height: 2rem;
     display: block;
     cursor: pointer;
-    position: relative;
     z-index: 1000;
+    color: white;
   }
 }
 
 @media (min-width: 768px) {
-  .navContainer {
+  .container {
     max-width: 61rem;
     padding: 0 2rem;
   }
@@ -118,8 +124,18 @@
 }
 
 @media (min-width: 1024px) {
-  .navContainer {
+  .container {
     max-width: 75rem;
     padding: 0 1rem;
   }
 }
+
+
+
+
+
+
+
+
+
+
