--- a/src/components/ServicesCards/ServicesCards.module.css
+++ b/src/components/ServicesCards/ServicesCards.module.css
@@ -6,61 +6,42 @@
   text-decoration: none;
   list-style: none;
 }
-
-.container {
-  position: relative;
-  width: 100%;
-  padding-top: 5rem;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 2rem;
+.container{
   z-index: 2;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding-top: 5rem;
 
-  & .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1.5rem;
-    padding: 2.5rem 3rem;
-    background-color: white;
+}
+
+.sCard {
+    padding: 2rem 3rem;    
     border-radius: 3px;
-    height: 450px;
-
-    & figure {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 1rem;
+    height: 400px;
+    gap: 5rem;
+}
+   .sIcon {     
       border-radius: 100%;
       background-color: var(--bg-blue);
       color: white;
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+   
+      
+   }
 
-      & svg {
-        filter: drop-shadow(0px 0px 2px rgba(250, 250, 250, 0.75));
-      }
-    }
+  .titleCard{
+  font-size: 1.2rem;
+  }
 
-    & h3 {
-      font-family: sans-serif !important;
-      font-weight: 600;
-      text-align: center;
-    }
-
-    & p {
+  .cardText{
       font-family: sans-serif !important;
       color: #7f7f7f;
-      text-align: center;
       text-wrap: pretty;
-      line-height: 1.75rem;
-      font-size: medium;
-      width: 100%;
+      line-height: 1.5rem;
+      margin-bottom: 0.25rem;
     }
 
-    & button {
+    button {
       color: #7f7f7f;
       padding: 0.65rem 2rem;
       background-color: transparent;
@@ -69,30 +50,32 @@
       font-weight: 100;
       transition: 200ms ease-in-out;
       cursor: pointer;
+     
 
       &:hover {
         background-color: rgba(127, 127, 127, 0.1);
       }
     }
-  }
-}
+  
 
 @media (min-width: 768px) {
   .container {
     flex-wrap: wrap;
-
-    & .card {
+  }
+ .sCard {
       gap: 1rem;
       height: 330px;
     }
   }
-}
+
 
 @media (min-width: 1024px) {
   .container {
     flex-wrap: nowrap;
-
-    & .card {
+    gap: 1.5rem;
+  }
+  
+  .sCard {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -104,4 +87,4 @@
       height: 450px;
     }
   }
-}
+
